--- a/public/landingpage/css/style.css
+++ b/public/landingpage/css/style.css
@@ -871,7 +871,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(40, 58, 90, 0.9), rgba(40, 58, 90, 0.9)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(30, 112, 108, 0.9), rgba(3, 22, 54, 0.9)), url("../img/cta-bg.png") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
@@ -901,8 +901,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #47b2e4;
-  border: 2px solid #47b2e4;
+  background: #04438a;
+  border: 2px solid #9cc7db;
 }
 
 @media (max-width: 1024px) {
